added internal stylesheet

--- a/20_css/0_inline/index.html
+++ b/20_css/0_inline/index.html
@@ -13,7 +13,7 @@
     <title>foo title</title>
   </head>
 
-  <body style="background-color:#666;font-family: Calibri, sans-serif;">
+  <body style="background-color:#666;font-family:sans-serif;">
     <h1 style="width:100%; text-align:center; color:white; background-color:#bebebe; margin:0;">h1 foo</h1>
     <table style="background-color:#767676; padding:10px;">
       <tr>
@@ -37,11 +37,9 @@
         </td>
       </tr>
     </table>
-
     <div style="padding:1%; text-align:right; background-color:#565656; width:98%; color:#6f706b;">
       Copyright &copy; 2016 Clyde "Thluffy" Sinclair
     </div>
-
   </body>
 
 </html>
