--- a/20_css/1_internal/index.html
+++ b/20_css/1_internal/index.html
@@ -1,34 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Clyde "Thluffy" Sinclair
-       SoftDev pd0
-       K20 -- CSS basics
-       2019-11-01f
+<!-- Jackie Lin
+     SoftDev pd1
+     K20 -- CSS basics
+     2019-11-01
 
-	 WORK FILE for CSS 	
-    -->
+ WORK FILE for CSS
+  -->
 
   <head>
     <meta charset="utf-8"/>
     <title>foo title</title>
+    <style>
+      body {
+        background-color:#666;
+        font-family:sans-serif;
+      }
+
+      h1 {
+        width:100%;
+        text-align:center;
+        color:white;
+        background-color:#bebebe;
+        margin:0;
+      }
+
+      table {
+        background-color:#767676;
+        padding:10px;
+      }
+
+      td {
+        vertical-align:top;
+        width:85%;
+      }
+
+      #navbar{
+        width:15%;
+      }
+
+      #main {
+        width:85%;
+      }
+
+      ul {
+        list-style-type:none;
+        padding-left:0;
+      }
+
+      a {
+        text-decoration:none;
+        color:white;
+      }
+
+      div {
+        padding:1%;
+        text-align:right;
+        background-color:#565656;
+        width:98%;
+        color:#6f706b;
+      }
+
+
+    </style>
   </head>
 
   <body>
-    <h1>foo heading 1</h1>
-    <h3>nav foo</h3>
-    <ul>
-      <li><a href="">dis</a></li>
-      <li><a href="">dat</a></li>
-      <li><a href="">de udda ting</a></li>
-    </ul>
-    <h2>main foo heading</h2>
-    <p>tk tk tk tk tk tk tk tk tk tk tk tk tk tk tk tk tk tk tk tk 
-
-      <br>
-      <br>
-
+    <h1>h1 foo</h1>
+    <table>
+      <tr>
+        <td id="navbar">
+          <h3>nav foo</h3>
+          <ul>
+            <li><a href="">dis</a></li>
+            <li><a href="">dat</a></li>
+            <li><a href="">de udda ting</a></li>
+          </ul>
+        </td>
+        <td>
+          <h2>main foo heading</h2>
+          <p>
+            <!-- obtained from loremipsum.io -->
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ante in nibh mauris cursus mattis molestie. Enim tortor at auctor urna nunc id. Diam maecenas sed enim ut. At risus viverra adipiscing at in tellus integer feugiat. Non nisi est sit amet facilisis. At erat pellentesque adipiscing commodo elit at imperdiet dui. Sit amet luctus venenatis lectus. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus. Dis parturient montes nascetur ridiculus mus. Varius morbi enim nunc faucibus a pellentesque sit. Aliquam malesuada bibendum arcu vitae elementum curabitur. Diam ut venenatis tellus in metus vulputate eu scelerisque felis. Egestas integer eget aliquet nibh praesent tristique. Ultrices sagittis orci a scelerisque purus semper eget duis. Platea dictumst quisque sagittis purus. Netus et malesuada fames ac. Nisl suscipit adipiscing bibendum est ultricies.
+            <br>
+            <br>
+            Integer malesuada nunc vel risus commodo viverra maecenas. Suspendisse in est ante in nibh mauris cursus mattis. Mi eget mauris pharetra et ultrices neque ornare aenean. Viverra tellus in hac habitasse platea. Felis imperdiet proin fermentum leo vel orci porta non. Velit egestas dui id ornare arcu odio ut sem. Amet est placerat in egestas. Viverra aliquet eget sit amet tellus cras adipiscing enim eu. Dolor sed viverra ipsum nunc aliquet bibendum enim facilisis. Consequat mauris nunc congue nisi. Augue neque gravida in fermentum et sollicitudin ac. Semper viverra nam libero justo laoreet sit amet. In nibh mauris cursus mattis molestie a iaculis at erat.
+          </p>
+        </td>
+      </tr>
+    </table>
+    <div>
       Copyright &copy; 2016 Clyde "Thluffy" Sinclair
-
+    </div>
   </body>
+
 
 </html>
