--- a/20_css/2_external/index.html
+++ b/20_css/2_external/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Clyde "Thluffy" Sinclair
-       SoftDev pd0
-       K20 -- CSS basics
-       2019-11-01f
+<!-- Jackie Lin
+     SoftDev pd1
+     K20 -- CSS basics
+     2019-11-01
 
-	 WORK FILE for CSS
-    -->
+ WORK FILE for CSS
+  -->
 
   <head>
     <meta charset="utf-8"/>
