--- a/20_css/0_inline/index.html
+++ b/20_css/0_inline/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Jackie Lin
+  <!-- Jackie Lin & Eric Lau
        SoftDev pd1
        K20 -- CSS basics
        2019-11-01
