--- a/28_jsdom/open_me.html
+++ b/28_jsdom/open_me.html
@@ -15,9 +15,6 @@
     <button id="fib">fibonacci(5)</button>
     <button id="gcd">gcd(36, 84)</button>
     <button id="rand">randomStudent()</button>
-    <script src="funky_town.js">
-      var fact = document.getElementById('fact');
-      fact.addEventListener('click', fact(5));
-    </script>
+    <script src="funky_town.js"></script>
   </body>
 </html>
