added code to display output and input on html page

--- a/28_jsdom/open_me.html
+++ b/28_jsdom/open_me.html
@@ -15,6 +15,9 @@
     <button id="fib">fibonacci(5)</button>
     <button id="gcd">gcd(36, 84)</button>
     <button id="rand">randomStudent()</button>
+    <br>
+    <b>Input: </b><p id="input"><br></p>
+    <b>Output: </b><p id="output"><br></p>
     <script src="funky_town.js"></script>
   </body>
 </html>
