--- a/03_canvas/clickdraw.html
+++ b/03_canvas/clickdraw.html
@@ -17,8 +17,10 @@
         alt txt
       </canvas>
     </div>
+    <h1 id="CurrentColor">Black<h1>
     <button id="toggle">Toggle</button>
     <button id="clear">Clear</button>
+    <button id="color">Color</button>
     <h1 id="mode">dot</h1>
     <script src="clickdraw.js"></script>
   </body>
